# GemChips

./: CMakeLists.txt  README.md  README_CWeixinMail.md
examples/: demo.cpp
include/: CESGatewayServer.h  CWeixinMail.h
src/: CESGatewayServer.cpp  CWeixinMail.cpp
